2001-06-04  Chema Celorio  <chema@celorio.com>

	* sort/sort.c: added the sort plugin by Carlo Borreo <borreo@softhome.net>

2001-05-15  Paolo Maggi  <maggi@athena.polito.it>

	* shell_output/shell_output.c: #included "utils.h" to silent
	a warning

2001-05-15  Paolo Maggi  <maggi@athena.polito.it>

	* ascii/ascii.c (destroy_plugin): don't free pd->name
	* browse/browse.c (gedit_plugin_destroy): ditto
	* convert/convert.c (destroy_plugin): ditto
	* diff/diff.c (gedit_plugin_destroy): ditto
	* docinfo/docinfo.c (destroy_plugin): ditto
	* email/email.c (gedit_plugin_destroy): ditto
	* shell_output/shell_output.c (destroy_plugin): ditto
	* spell/spell.c (destroy_plugin): ditto
	* time/time.c (destroy_plugin): ditto

	Thanks to Carlo Borreo for reporting this bug.

2001-05-12  Chema Celorio  <chema@celorio.com>

	* sample/sample.c (destroy_plugin): don't free pd->name
	* reverse/reverse.c (destroy_plugin): ditto

2001-03-19  Paolo Maggi  <maggi@athnea.polito.it>
	
	* Makefile.am (SUBDIRS): include ASCII and docinfo

	* ASCII/Makefile.am:
	* ASCII/ascii.c:
	* ASCII/asciitable.glade:
	* ASCII/asciitable.glade.h: new ASCII table plugin

	* docinfo/Makefile.am:
	* docinfo/docinfo.c
	* docinfo/docinfo.glade:
	* docinfo/docinfo.glade.h: new Document Info plugin

	* sample/sample.c: typo

2001-02-28  Paolo Maggi  <maggi@athnea.polito.it>

	* diff/diff.c:
	* diff/diff.glade: added a check button: Use the unified
	output format (-u option)	

2001-02-28  Chema Celorio  <chema@celorio.com>

	* diff/diff.c (gedit_plugin_execute): fix a small typo

2001-02-25  Chema Celorio  <chema@celorio.com>

	* diff/diff.c (gedit_plugin_execute): remove the -u since
	solaris diff does not support it. #ifdef out the code with :
	
	#ifdef WHEN_WILL_SOLARIS_UPGRADE_THEIR_OS_TO_GNU_SOLARIS_I_ASK_MYSELF_CONSTANTLY	

2001-02-21  Paolo Maggi <maggi@athena.polito.it>

	* convert/convert.glade:
	* convert/convert.c : embellishment of the dialog

2001-02-20  Paolo Maggi <maggi@athena.polito.it>
