@@ -2,6 +2,6 @@
 ## the menus show the plugins in alphabetical order. The
 ## correct solution is to add a sort function before adding
 ## to the menus. But this is a temp fix
-SUBDIRS = ASCII browse convert diff docinfo email sample time reverse shell_output sort
+SUBDIRS = ASCII browse convert diff docinfo email sample time reverse shell_output sort cvschangelog
 
 EXTRA_DIST = ChangeLog
