@@ -1,3 +1,7 @@
+2001-11-15  Chema Celorio  <chema@celorio.com>
+
+	* added cvslog pluging from James Willcox
+
 2001-06-04  Chema Celorio  <chema@celorio.com>
 
 	* sort/sort.c: added the sort plugin by Carlo Borreo <borreo@softhome.net>
